# nft_adventurers

./: CODE_REVIEW_nft_adventurers_2026-06-06.md  CODE_STANDARDS.md  Cargo.toml  GAME_DEVELOPMENT_GUIDE.md  GDD.md  README.md  TECHNICAL_IMPLEMENTATION.md  index.html  migration_debug.txt  migration_log.txt  nft.md  nft_adventurers.db  output.txt  publish.ps1  run_test.bat
backend/: CODE_REVIEW_backend_2026-06-06.md  Cargo.toml  nft_adventurers.db
backend/assets/: feat_config.json
backend/src/: main.rs
backend/src/db/: missions.rs  mod.rs  queries.rs
backend/src/engine/: feat_generator.rs  mission_resolver.rs  mod.rs
backend/src/handlers/: auth.rs  game_data.rs  hold.rs  inventory.rs  market.rs  missions.rs  mod.rs  player.rs  tavern.rs
backend/src/models/: mod.rs
client/: CODE_REVIEW_client_2026-06-06.md  Cargo.toml
client/assets/: buildings.json  classes.json  image_prompts.json  missions.json  textures.json
client/src/: game.rs  identity.rs  main.rs
client/src/api/: mod.rs
client/src/data/: assets.rs  mod.rs
client/src/state/: mod.rs
client/src/ui/: mod.rs
client/src/ui/screens/: adventurer_detail.rs  hold.rs  inventory.rs  main_menu.rs  market.rs  mission_select.rs  mod.rs  recruit.rs  skills.rs
shared/: CODE_REVIEW_shared_2026-06-06.md  Cargo.toml
shared/src/: adventurer.rs  building.rs  consumable.rs  feat.rs  game_data.rs  item.rs  lib.rs  mission.rs  player.rs  skills.rs
