[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }

# Auth
ethers = "2.0"
hex = "0.4"

# Utils
rand = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
