[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
macroquad = { workspace = true }
macroquad-toolkit = { path = "../../macroquad-toolkit" }

# HTTP client (works on both native and WASM via macroquad's fetch)
ureq = { version = "2.9", features = ["json"] }
